sticker didn't look good on mobile, fixed

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -86,7 +86,8 @@ pre code.hljs {
 	width: 100%;
 	text-align: center;
 	img.sticker {
-		    width: auto;
+		    width: 100%;
+		    max-width: 300px;
 		    margin-top: -3em;
 		    margin-bottom: -7.5em;
 	}
